# serializer version: 1
# name: TestArgMaxNonNullableSimplification.test_event_person_override_person_id_is_simplified
  '''
  SELECT if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id) AS person_id
  FROM
    (SELECT events.distinct_id AS distinct_id,
            events.person_id AS person_id
     FROM events
     WHERE and(equals(events.team_id, 99999), equals(events.event, '$pageview'))
     LIMIT 100) AS events
  LEFT OUTER JOIN
    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
            person_distinct_id_overrides.distinct_id AS distinct_id
     FROM person_distinct_id_overrides
     WHERE equals(person_distinct_id_overrides.team_id, 99999)
     GROUP BY person_distinct_id_overrides.distinct_id
     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestArgMaxNonNullableSimplification.test_non_nullable_columns_are_simplified
  '''
  SELECT persons.id AS id,
         persons.created_at AS created_at
  FROM
    (SELECT argMax(toTimeZone(person.created_at, 'UTC'), person.version) AS created_at,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE equals(persons.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestArgMaxNonNullableSimplification.test_nullable_json_property_keeps_wrap_and_latest_null_wins
  '''
  SELECT persons.properties___jsonprop AS jsonprop,
         persons.properties___untouched AS untouched
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'jsonprop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___jsonprop,
            tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'untouched'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___untouched,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE equals(persons.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestArgMaxNonNullableSimplification.test_nullable_materialized_property_keeps_wrap_and_latest_null_wins
  '''
  SELECT persons.properties___matprop AS matprop
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_matprop), person.version), 1) AS properties___matprop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE equals(persons.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestArgMaxNonNullableSimplification.test_nullable_property_keeps_wrap_and_latest_null_wins_0_json
  '''
  SELECT persons.properties___jsonprop AS jsonprop,
         persons.properties___untouched AS untouched
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'jsonprop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___jsonprop,
            tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'untouched'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___untouched,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE equals(persons.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestArgMaxNonNullableSimplification.test_nullable_property_keeps_wrap_and_latest_null_wins_1_materialized
  '''
  SELECT persons.properties___matprop AS matprop,
         persons.properties___untouched AS untouched
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_matprop), person.version), 1) AS properties___matprop,
            tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'untouched'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___untouched,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), equals(where_optimization.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE equals(persons.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestPersonOptimization.test_joins_are_left_alone_for_now
  '''
  SELECT events.uuid AS uuid
  FROM events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS events__pdi___person_id,
            argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 99999)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id)
  INNER JOIN
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '') AS `properties___$some_prop`
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS events__pdi__person ON equals(events__pdi.events__pdi___person_id, events__pdi__person.id)
  WHERE and(equals(events.team_id, 99999), ifNull(equals(events__pdi__person.`properties___$some_prop`, 'something'), 0))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestPersonOptimization.test_order_by_limit_transferred
  '''
  SELECT persons.id AS id,
         persons.properties AS properties
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$some_prop`,
            argMax(person.properties, person.version) AS properties,
            argMax(toTimeZone(person.created_at, 'UTC'), person.version) AS created_at,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$some_prop'), ''), 'null'), '^"|"$', ''), 'something'), 0)))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(equals(persons.`properties___$some_prop`, 'something'), 0)
  ORDER BY persons.created_at DESC
  LIMIT 2 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestPersonOptimization.test_simple_filter
  '''
  SELECT persons.id AS id,
         persons.properties AS properties
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$some_prop`,
            argMax(person.properties, person.version) AS properties,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$some_prop'), ''), 'null'), '^"|"$', ''), 'something'), 0)))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(equals(persons.`properties___$some_prop`, 'something'), 0)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestPersonsV2LimitPushDown.test_v2_cohort_where_does_not_push_limit_down
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 99999
    AND cohort_id = 99999
    AND version = 0
  '''
# ---
# name: TestPersonsV2LimitPushDown.test_v2_cohort_where_does_not_push_limit_down.1
  '''
  SELECT persons.id AS id,
         persons.properties___email AS email
  FROM
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS properties___email,
            toTimeZone(person.created_at, 'UTC') AS created_at
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS persons
  LEFT JOIN
    (SELECT cohortpeople.person_id AS cohort_person_id,
            1 AS matched,
            cohortpeople.cohort_id AS cohort_id
     FROM cohortpeople
     WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, 99999), equals(cohortpeople.version, 0))) AS __in_cohort ON equals(__in_cohort.cohort_person_id, persons.id)
  WHERE equals(__in_cohort.matched, 1)
  ORDER BY persons.created_at DESC
  LIMIT 3 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
# name: TestPersonsV2LimitPushDown.test_v2_order_by_and_limit_pushed_down
  '''
  SELECT persons.id AS id,
         persons.`properties___$some_prop` AS `$some_prop`
  FROM
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '') AS `properties___$some_prop`,
            toTimeZone(person.created_at, 'UTC') AS created_at
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))
                                                    ORDER BY argMax(toTimeZone(person.created_at, 'UTC'), person.version) DESC
                                                    LIMIT 3
                                                    OFFSET 0))) SETTINGS optimize_aggregation_in_order=1) AS persons
  ORDER BY persons.created_at DESC
  LIMIT 2 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   optimize_rewrite_aggregate_function_with_if=0,
                   optimize_min_inequality_conjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1,
                   use_hive_partitioning=0
  '''
# ---
